plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}
ext {
    springCloudVersion = "2025.0.0"
}

group = 'com.lingo'
version = '0.0.1-SNAPSHOT'
description = 'lingo-project'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // spring web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // 채팅 (websocket)
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // mongodb
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // rdbs
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // lombok
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'

    // spring test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // jwt
    implementation("io.jsonwebtoken:jjwt-api:0.12.3")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.3")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.3")

    // aws s3 image
    implementation platform("software.amazon.awssdk:bom:2.25.0")
    implementation "software.amazon.awssdk:s3"
    implementation "software.amazon.awssdk:sqs"


    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // aop
    implementation("org.springframework.boot:spring-boot-starter-aop")


    // excel
    implementation("org.apache.poi:poi:5.4.0")
    implementation("org.apache.poi:poi-ooxml:5.4.0")

    // 검증
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //QueryDsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // fcm
    implementation 'com.google.firebase:firebase-admin:9.7.0'

    // aws rekognition
    implementation platform("software.amazon.awssdk:bom:2.25.0")
    implementation "software.amazon.awssdk:rekognition"

    // 프로메테우스
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // webclient, webflux
    implementation("org.springframework.boot:spring-boot-starter-webflux")

    // heic to jpg
    implementation "org.bytedeco:ffmpeg-platform:7.1.1-1.5.12"
    implementation "org.bytedeco:javacv-platform:1.5.12"

    // jpa logging configuration
    implementation 'p6spy:p6spy:3.9.1'

    // elasticsearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

}
dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
